habra-clone-kuber/spring-back-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-back
  labels:
    app: spring-back
spec:
  replicas: 1
  template:
    metadata:
      name: spring-back
      labels:
        app: spring-back
    spec:
      containers:
        - name: spring-back
          image: kurmasasha/spring-image-m1:v5
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
      restartPolicy: Always
  selector:
    matchLabels:
      app: spring-back

---

apiVersion: v1
kind: Service
metadata:
  name: spring-back-service
spec:
  selector:
    app: spring-back-service
  ports:
    - port: 8080
      targetPort: 8080
  type: NodePort
