habra-clone-kuber/spring-db-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-db
  labels:
    app: spring-db
spec:
  replicas: 1
  template:
    metadata:
      name: spring-db
      labels:
        app: spring-db
    spec:
      containers:
        - name: spring-db
          image: postgres
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5432
      restartPolicy: Always
  selector:
    matchLabels:
      app: spring-db

---

apiVersion: v1
kind: Service
metadata:
  name: spring-db-service
spec:
  selector:
    app: spring-db
  ports:
    - port: 5432
      targetPort: 5432
